--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   font_awesome_flutter: ^8.5.0
   firebase: ^7.2.1
+  elastic_client: ^0.1.9
 
 
 dev_dependencies:
