--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   firebase: ^7.2.1
   elastic_client: ^0.1.9
+  get_it: ^3.1.0
 
 
 dev_dependencies:
